Fixing spacing

--- a/public/css/app-web-styles.css
+++ b/public/css/app-web-styles.css
@@ -21428,8 +21428,12 @@ input:focus:-ms-input-placeholder {
   color: #f5f5f5;
 }
 
-.owl-carousel-main {
-  margin-bottom: 10px;
+.owl-dots {
+  display: none;
+}
+
+.owl-carousel-thumbnails {
+  margin-top: 5px;
 }
 
 .shop-discount-container {
@@ -21533,6 +21537,16 @@ input:focus:-ms-input-placeholder {
 .product-content .product-sizes .product-size,
 .product-content .product-sizes .product-size-selected,
 .product-content .product-sizes .product-size-disabled {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 7px;
   width: 38px;
   height: 38px;
   border-radius: 50%;
@@ -21560,12 +21574,8 @@ input:focus:-ms-input-placeholder {
 .product-content .product-sizes .product-size .product-size-text,
 .product-content .product-sizes .product-size-selected .product-size-text,
 .product-content .product-sizes .product-size-disabled .product-size-text {
-  width: 100%;
-  height: 0;
   display: inline-block;
-  line-height: 0;
   position: relative;
-  vertical-align: middle;
   font-size: 15px;
 }
 
