--- a/resources/assets/sass/web/shop.scss
+++ b/resources/assets/sass/web/shop.scss
@@ -125,8 +125,12 @@
   }
 }
 
-.owl-carousel-main {
-  margin-bottom: 10px;
+.owl-dots {
+  display: none;
+}
+
+.owl-carousel-thumbnails {
+  margin-top: 5px;
 }
 
 .shop-discount-container {
